# SSCF

./: CMakeLists.txt  README.md  experiment.cpp  experiment_latency.cpp  experiment_vulNegKeyRatio.cpp  experiment_weightedFPR.cpp
SSCF/: HashMudulator.h  SeesawCF.h  publicStruct.h
nonlearnedfilter/: countingBloom.h  naiveFilter.h  wbf.h  wcbf.h
nonlearnedfilter/stackedfilter/: Common.h  CountingBloomFilterLayer.h  StackedFilter.h
util/: dataloader.h  key.h
util/xxhash/: murmur.h
